@@ -6,3 +6,4 @@ Makefile.PL
 t/tree.t
 t/no_coord.t
 t/only_node.t
+t/spline.t
