@@ -31,6 +31,8 @@ See the embedded documentation in the module for more details.
 
 Comments and suggestions are always welcome.
 
+Thanks to Ralf Valerien for the bug fix and the spline shortcut arrow.
+
 Legal mumbo jumbo:
 
  Copyright (c) 1999 Dominique Dumont. All rights reserved.
